update building instructions